--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
   "dependencies": {
     "@tanstack/react-router": "^1.134.9",
     "@tanstack/react-start": "^1.134.9",
+    "clsx": "^2.1.1",
     "nitro": "3.0.1-alpha.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.21",
     "@csstools/postcss-global-data": "3.1.0",
     "@eslint-react/eslint-plugin": "^2.3.1",
     "@eslint/js": "^9.39.0",
     "@types/node": "^24.9.2",
+    "@types/postcss-import": "14.0.3",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@types/postcss-import": "14.0.3",
     "@typescript-eslint/eslint-plugin": "8.41.0",
     "@typescript-eslint/parser": "8.41.0",
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "10.4.21",
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-formatter-compact": "^9.0.1",
