--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+    "build:ci": "pnpm storybook:build && pnpm build",
     "lint": "eslint . --ext ts,tsx,cjs,js,mdx --report-unused-disable-directives --cache --cache-location node_modules/.cache/.eslintcache",
     "lint:fix": "eslint . --fix --ext ts,tsx,cjs,js,mdx --report-unused-disable-directives --cache --cache-location node_modules/.cache/.eslintcache",
     "stylelint": "stylelint --config .stylelintrc.cjs \"src/**/*.css\"",
     "stylelint:fix": "stylelint --config .stylelintrc.cjs \"src/**/*.css\" --formatter verbose --fix",
     "docker:rm": "docker image rm crafity-start -f",
     "docker:build": "docker build -t crafity-start .",
-    "docker:run": "docker run -v ./count.txt:/app/count.txt -p 3000:3000 crafity-start"
+    "docker:run": "docker run -v ./count.txt:/app/count.txt -p 3000:3000 crafity-start",
+    "storybook:build": "STORYBOOK=true storybook build && mv storybook-static ./public/storybook",
+    "storybook:dev": "storybook dev -p 6006",
+    "storybook:start": "http-server ./storybook-static"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.16.1",
   "dependencies": {
+    "@storybook/addon-links": "^10.0.5",
     "@tanstack/react-router": "^1.134.9",
     "@tanstack/react-start": "^1.134.9",
     "clsx": "^2.1.1",
@@ -28,9 +33,12 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
     "@csstools/postcss-global-data": "3.1.0",
     "@eslint-react/eslint-plugin": "^2.3.1",
     "@eslint/js": "^9.39.0",
+    "@storybook/addon-docs": "^9.1.3",
+    "@storybook/react-vite": "^9.1.3",
     "@types/node": "^24.9.2",
     "@types/postcss-import": "14.0.3",
     "@types/react": "^19.2.2",
@@ -57,6 +65,7 @@
     "eslint-plugin-sort-destructure-keys": "2.0.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-ssr-friendly": "^1.3.0",
+    "eslint-plugin-storybook": "^9.1.3",
     "eslint-plugin-typescript-sort-keys": "^3.3.0",
     "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-unused-imports": "4.1.4",
@@ -64,6 +73,7 @@
     "postcss-custom-media": "11.0.6",
     "postcss-import": "16.1.1",
     "postcss-nested": "7.0.2",
+    "storybook": "^9.1.3",
     "stylelint": "16.23.1",
     "stylelint-config-css-modules": "4.5.1",
     "stylelint-config-idiomatic-order": "10.0.0",
