--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "@csstools/postcss-global-data": "3.1.0",
     "@eslint-react/eslint-plugin": "^2.3.1",
     "@eslint/js": "^9.39.0",
+    "@storybook/addon-a11y": "^10.0.5",
     "@storybook/addon-docs": "^9.1.3",
+    "@storybook/blocks": "9.0.0-alpha.17",
     "@storybook/react-vite": "^9.1.3",
+    "@storybook/test": "^8.6.14",
     "@types/node": "^24.9.2",
     "@types/postcss-import": "14.0.3",
     "@types/react": "^19.2.2",
