Implement react compiler plugin

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@typescript-eslint/parser": "8.41.0",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "10.4.21",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-formatter-compact": "^9.0.1",
