Implement cookie banner and update storybook stories

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "docker:rm": "docker image rm crafity-start -f",
     "docker:build": "docker build -t crafity-start .",
     "docker:run": "docker run -v ./count.txt:/app/count.txt -p 3000:3000 crafity-start",
-    "storybook:build": "STORYBOOK=true storybook build && mv storybook-static ./public/storybook",
+    "storybook:build": "STORYBOOK=true storybook build && mv ./storybook-static ./public/storybook",
     "storybook:dev": "storybook dev -p 6006",
     "storybook:start": "http-server ./storybook-static"
   },
